Login en GI. Agregados los cy:run

--- a/package.json
+++ b/package.json
@@ -177,8 +177,8 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "cy:run": "npx cypress run --browser chrome --headed --spec cypress/e2e/primerTest.cy.js --reporter mocha-allure-reporter",
-    "cy:run_headless": "npx cypress run --browser chrome  --spec cypress/e2e/primerTest.cy.js --reporter mocha-allure-reporter",
+    "cy:run": "npx cypress run --browser chrome --headed --spec cypress/e2e/**/*.cy.js",
+    "cy:run_headless": "npx cypress run --browser chrome  --spec cypress/e2e/**/*.cy.js",
     "report:allure": "allure generate allure-results --clean -o allure-report && allure open allure-report"
   },
   "repository": {
