--- a/package.json
+++ b/package.json
@@ -179,6 +179,17 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "cy:run": "npx cypress run --browser chrome --headed --spec cypress/e2e/**/*.cy.js",
     "cy:run_headless": "npx cypress run --browser chrome  --spec cypress/e2e/**/*.cy.js",
+    "cy:run:GI": "npx cypress run --browser chrome --headed --spec cypress/e2e/InterrupcionesGI/**/*.cy.js",
+    "cy:run:GI_headless": "npx cypress run --browser chrome  --spec cypress/e2e/InterrupcionesGI/**/*.cy.js",
+    "cy:run:FM": "npx cypress run --browser chrome --headed --spec cypress/e2e/GestionFM/**/*.cy.js",
+    "cy:run:FM_headless": "npx cypress run --browser chrome  --spec cypress/e2e/GestionFM/**/*.cy.js",
+    "cy:run:ENRE": "npx cypress run --browser chrome --headed --spec cypress/e2e/TablasENRE/**/*.cy.js",
+    "cy:run:ENRE_headless": "npx cypress run --browser chrome  --spec cypress/e2e/TablasENRE/**/*.cy.js",
+    "cy:run:SIM": "npx cypress run --browser chrome --headed --spec cypress/e2e/Simulacion/**/*.cy.js",
+    "cy:run:SIM_headless": "npx cypress run --browser chrome  --spec cypress/e2e/Simulacion/**/*.cy.js",
+    "cy:run:BON": "npx cypress run --browser chrome --headed --spec cypress/e2e/Bonificacion/**/*.cy.js",
+    "cy:run:BON_headless": "npx cypress run --browser chrome  --spec cypress/e2e/Bonificacion/**/*.cy.js",
+
     "report:allure": "allure generate allure-results --clean -o allure-report && allure open allure-report"
   },
   "repository": {
